src/test/ui/wasm-import-module.rs
// Copyright 2018 The Rust Project Developers. See the COPYRIGHT
// file at the top-level directory of this distribution and at
// http://rust-lang.org/COPYRIGHT.
//
// Licensed under the Apache License, Version 2.0 <LICENSE-APACHE or
// http://www.apache.org/licenses/LICENSE-2.0> or the MIT license
// <LICENSE-MIT or http://opensource.org/licenses/MIT>, at your
// option. This file may not be copied, modified, or distributed
// except according to those terms.

#![feature(wasm_import_module)]

#[wasm_import_module] //~ ERROR: must be of the form
extern {}

#[wasm_import_module = "foo"] //~ ERROR: must only be attached to
fn foo() {}

fn main() {}

